--- a/aframe/examples/basic.html
+++ b/aframe/examples/basic.html
@@ -19,11 +19,13 @@
 		<a-anchor hit-testing-enabled='true'>
 
 			<!-- Add your augmented reality here -->
-			<a-box position='0 0.5 0' material='opacity: 1.0; side:double; color:red;'>
+<!-- 			<a-box position='0 0.5 0' material='opacity: 1.0; side:double; color:red;'>
 				<a-torus-knot radius='0.26' radius-tubular='0.05'>
 					<a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
 				</a-torus-knot>
-			</a-box>
+			</a-box> -->
+
+			<a-entity geometry="primitive: box" material="color: red">
 
 		</a-anchor>
 
