--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
-<script src="aframe/examples/vendor/aframe/build/aframe.js"></script>
-<script src="aframe/build/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 
 <style>
 
@@ -9,8 +9,8 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
-<!--       <a-marker preset='kanji'> -->
-      <a-marker type='pattern' patternUrl='markers/pattern-marker.patt'>
+      <!-- <a-marker preset='kanji'> -->
+      <a-marker type='pattern' url='./data/pattern-marker.patt'>
           <a-box position='0 0.5 0' material='color: 0.5;opacity: 0.5;side: double'>
           	<a-torus-knot radius='0.26' radius-tubular='0.05'>
 				<a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
