--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
-      <!-- <a-marker preset='kanji'> -->
-      <a-marker type='pattern' url='./data/pattern-marker.patt'>
+      <a-marker preset='kanji'>
+      <!-- <a-marker type='pattern' url='./data/pattern-marker.patt'> -->
           <a-box position='0 0.5 0' material='color: 0.5;opacity: 0.5;side: double'>
             <a-torus-knot radius='0.26' radius-tubular='0.05'>
         <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
