--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
 <!--       <a-marker preset='kanji'> -->
-      <a-marker type='pattern' url='./pattern-marker.patt'>
-          <a-box position='0 0.5 0' material='color: 0.5;opacity: 0.5;side: double'>
+      <a-marker type='pattern' url='./pattern-marker-4.patt'>
+          <a-box position='0 0.5 0' material='color: red;opacity: 0.5;side: double'>
             <a-torus-knot radius='0.26' radius-tubular='0.05'>
         <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
       </a-torus-knot>
