--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
+         <a-assets>
+          <a-asset-item id="Heart-obj" src="/models/Heart.obj"></a-asset-item>
+          <a-asset-item id="Heart-mtl" src="/models/Heart.mtl"></a-asset-item>
+          </a-assets>
 <!--       <a-marker preset='kanji'> -->
       <a-marker type='pattern' url='./pattern-marker-8.patt'>
           <a-box position='0 0.5 0' material='color: red;opacity: 0.5;side: double'>
-            <a-torus-knot radius='0.26' radius-tubular='0.05'>
-        <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
+            <!-- <a-torus-knot radius='0.26' radius-tubular='0.05'>
+        <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation> -->
+
       </a-torus-knot>
           </a-box>
       </a-marker>
