--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
          <a-assets>
-          <a-asset-item id="Heart-obj" src="/models/Heart.obj"></a-asset-item>
-          <a-asset-item id="Heart-mtl" src="/models/Heart.mtl"></a-asset-item>
+          <a-asset-item id="Heart-obj" src="./models/Heart.obj"></a-asset-item>
+          <a-asset-item id="Heart-mtl" src="./models/Heart.mtl"></a-asset-item>
           </a-assets>
 <!--       <a-marker preset='kanji'> -->
       <a-marker type='pattern' url='./pattern-marker-8.patt'>
