--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </a-torus-knot>
           </a-box>
       </a-marker>
+      <a-entity obj-model="obj: #Heart-obj; mtl: #Heart-mtl"></a-entity>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
