--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <!--       <a-marker preset='kanji'> -->
       <a-marker type='pattern' url='./pattern-marker-8.patt'>
           <a-box position='0 0.5 0' material='color: red;opacity: 0.5;side: double'>
-            <!-- <a-torus-knot radius='0.26' radius-tubular='0.05'>
-        <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation> -->
-
-      </a-torus-knot>
+<!--             <a-torus-knot radius='0.26' radius-tubular='0.05'>
+        <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
+      </a-torus-knot> -->
+            <a-entity obj-model="obj: #Heart-obj; mtl: #Heart-mtl"></a-entity>
           </a-box>
       </a-marker>
-      <a-entity obj-model="obj: #Heart-obj; mtl: #Heart-mtl"></a-entity>
+
       <a-entity camera></a-entity>
     </a-scene>
   </body>
