--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           </a-assets>
 <!--       <a-marker preset='kanji'> -->
       <a-marker type='pattern' url='./pattern-marker-8.patt'>
-          <a-box position='0 0.0 0' material='color: red;opacity: 0.0;side: double'>
+          <a-box position='0 0.0 0' material='color: 0.5;opacity: 0.4;side: double' scale="4 4 4">
 <!--             <a-torus-knot radius='0.26' radius-tubular='0.05'>
         <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
       </a-torus-knot> -->
-            <a-entity obj-model="obj: #Heart-obj; mtl: #Heart-mtl" material="side: double" position="0 0 0" scale="0.01 0.01 0.01" ></a-entity>
+<!--             <a-entity obj-model="obj: #Heart-obj; mtl: #Heart-mtl" material="side: double" position="0 0 0" scale="0.01 0.01 0.01" ></a-entity> -->
           </a-box>
       </a-marker>
 
