--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs ='sourceType: webcam; debugUIEnabled: false;' 
              vr-mode-ui="enabled: false" > 
-         <a-assets>
+<!--          <a-assets>
           <a-asset-item id="Heart-obj" src="./models/Heart.obj"></a-asset-item>
           <a-asset-item id="Heart-mtl" src="./models/Heart.mtl"></a-asset-item>
-          </a-assets>
+          </a-assets> -->
 <!--       <a-marker preset='kanji'> -->
-      <a-marker type='pattern' url='./pattern-marker-8.patt'>
-          <a-box position='0 0.0 0' material='color: 0.5;opacity: 0.4;side: double' scale="4 4 4">
+      <a-marker type='pattern' url='./pattern/pattern-marker-8.patt'>
+          <a-box position='0 0.0 0' material='color: 0.5;opacity: 0.8;side: double' scale="2 2 2">
 <!--             <a-torus-knot radius='0.26' radius-tubular='0.05'>
         <a-animation attribute="rotation" to="360 0 0" dur="3000" easing='linear' repeat="indefinite"></a-animation>
       </a-torus-knot> -->
